--- a/research/Model_for_My_ML_Service.ipynb
+++ b/research/Model_for_My_ML_Service.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Model for My ML Service",
-      "provenance": [],
-      "authorship_tag": "ABX9TyPlJm2GqWhp1acMjBpOl0sV",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/harikishantk/my_ml_service/blob/main/Model_for_My_ML_Service.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -38,9 +21,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "id": "-uPSonm8P2BO"
       },
+      "outputs": [],
       "source": [
         "import json # will be needed for saving preprocessing details\n",
         "import numpy as np # for data manipulation\n",
@@ -49,10 +34,9 @@
         "from sklearn.preprocessing import LabelEncoder # for preprocessing\n",
         "from sklearn.ensemble import RandomForestClassifier # for training the algorithm\n",
         "from sklearn.ensemble import ExtraTreesClassifier # for training the algorithm\n",
-        "import joblib # for saving algorithm and preprocessing objects"
-      ],
-      "execution_count": 2,
-      "outputs": []
+        "import joblib # for saving algorithm and preprocessing objects\n",
+        "import requests"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -65,6 +49,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -73,20 +58,8 @@
         "id": "O_rQ2AsiQDW4",
         "outputId": "46d75d1d-8358-496d-e0a1-f64f29dc8041"
       },
-      "source": [
-        "# load dataset\n",
-        "df = pd.read_csv('https://raw.githubusercontent.com/pplonski/datasets-for-start/master/adult/data.csv', skipinitialspace=True)\n",
-        "x_cols = [c for c in df.columns if c != 'income']\n",
-        "# set input matrix and target column\n",
-        "X = df[x_cols]\n",
-        "y = df['income']\n",
-        "# show first rows of data\n",
-        "df.head()"
-      ],
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -230,22 +203,33 @@
               "[5 rows x 15 columns]"
             ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# load dataset\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/pplonski/datasets-for-start/master/adult/data.csv', skipinitialspace=True)\n",
+        "x_cols = [c for c in df.columns if c != 'income']\n",
+        "# set input matrix and target column\n",
+        "X = df[x_cols]\n",
+        "y = df['income']\n",
+        "# show first rows of data\n",
+        "df.head()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
         "id": "g8SL4nJ6QJvd"
       },
+      "outputs": [],
       "source": [
         "# data split train / test\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3, random_state=1234)"
-      ],
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -258,6 +242,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -265,28 +250,29 @@
         "id": "8hwUAfHNQbVK",
         "outputId": "6d582836-336e-4627-a0ec-e824275cda71"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'age': 31.0, 'workclass': 'Private', 'fnlwgt': 121124, 'education': 'HS-grad', 'education-num': 9.0, 'marital-status': 'Married-civ-spouse', 'occupation': 'Prof-specialty', 'relationship': 'Husband', 'race': 'White', 'sex': 'Male', 'capital-gain': 0.0, 'capital-loss': 0.0, 'hours-per-week': 40.0, 'native-country': 'United-States'}\n"
+          ]
+        }
+      ],
       "source": [
         "# fill missing values\n",
         "train_mode = dict(X_train.mode().iloc[0])\n",
         "X_train = X_train.fillna(train_mode)\n",
         "print(train_mode)"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'age': 31.0, 'workclass': 'Private', 'fnlwgt': 121124, 'education': 'HS-grad', 'education-num': 9.0, 'marital-status': 'Married-civ-spouse', 'occupation': 'Prof-specialty', 'relationship': 'Husband', 'race': 'White', 'sex': 'Male', 'capital-gain': 0.0, 'capital-loss': 0.0, 'hours-per-week': 40.0, 'native-country': 'United-States'}\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
         "id": "EK7L266kQpLf"
       },
+      "outputs": [],
       "source": [
         "# convert categoricals\n",
         "encoders = {}\n",
@@ -296,9 +282,7 @@
         "    categorical_convert = LabelEncoder()\n",
         "    X_train[column] = categorical_convert.fit_transform(X_train[column])\n",
         "    encoders[column] = categorical_convert"
-      ],
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -311,32 +295,33 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
         "id": "j85GJVfYQwtL"
       },
+      "outputs": [],
       "source": [
         "# train the Random Forest algorithm\n",
         "rf = RandomForestClassifier(n_estimators = 100)\n",
         "rf = rf.fit(X_train, y_train)"
-      ],
-      "execution_count": 7,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "id": "ny4xuQNDQ0wa"
       },
+      "outputs": [],
       "source": [
         "# train the Extra Trees algorithm\n",
         "et = ExtraTreesClassifier(n_estimators = 100)\n",
         "et = et.fit(X_train, y_train)"
-      ],
-      "execution_count": 8,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -344,37 +329,295 @@
         "id": "tD5AXCaOQ8aw",
         "outputId": "b44c31c0-516f-4a33-bb5f-20de1ae05f96"
       },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['./extra_trees.joblib']"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# save preprocessing objects and RF algorithm\n",
         "joblib.dump(train_mode, \"./train_mode.joblib\", compress=True)\n",
         "joblib.dump(encoders, \"./encoders.joblib\", compress=True)\n",
         "joblib.dump(rf, \"./random_forest.joblib\", compress=True)\n",
         "joblib.dump(et, \"./extra_trees.joblib\", compress=True)"
-      ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['./extra_trees.joblib']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Test\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "id": "0riyHw4URDh1"
       },
-      "source": [
-        ""
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>age</th>\n",
+              "      <th>workclass</th>\n",
+              "      <th>fnlwgt</th>\n",
+              "      <th>education</th>\n",
+              "      <th>education-num</th>\n",
+              "      <th>marital-status</th>\n",
+              "      <th>occupation</th>\n",
+              "      <th>relationship</th>\n",
+              "      <th>race</th>\n",
+              "      <th>sex</th>\n",
+              "      <th>capital-gain</th>\n",
+              "      <th>capital-loss</th>\n",
+              "      <th>hours-per-week</th>\n",
+              "      <th>native-country</th>\n",
+              "      <th>income</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>39</td>\n",
+              "      <td>State-gov</td>\n",
+              "      <td>77516</td>\n",
+              "      <td>Bachelors</td>\n",
+              "      <td>13</td>\n",
+              "      <td>Never-married</td>\n",
+              "      <td>Adm-clerical</td>\n",
+              "      <td>Not-in-family</td>\n",
+              "      <td>White</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>2174</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>50</td>\n",
+              "      <td>Self-emp-not-inc</td>\n",
+              "      <td>83311</td>\n",
+              "      <td>Bachelors</td>\n",
+              "      <td>13</td>\n",
+              "      <td>Married-civ-spouse</td>\n",
+              "      <td>Exec-managerial</td>\n",
+              "      <td>Husband</td>\n",
+              "      <td>White</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>13</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>38</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>215646</td>\n",
+              "      <td>HS-grad</td>\n",
+              "      <td>9</td>\n",
+              "      <td>Divorced</td>\n",
+              "      <td>Handlers-cleaners</td>\n",
+              "      <td>Not-in-family</td>\n",
+              "      <td>White</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>53</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>234721</td>\n",
+              "      <td>11th</td>\n",
+              "      <td>7</td>\n",
+              "      <td>Married-civ-spouse</td>\n",
+              "      <td>Handlers-cleaners</td>\n",
+              "      <td>Husband</td>\n",
+              "      <td>Black</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>28</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>338409</td>\n",
+              "      <td>Bachelors</td>\n",
+              "      <td>13</td>\n",
+              "      <td>Married-civ-spouse</td>\n",
+              "      <td>Prof-specialty</td>\n",
+              "      <td>Wife</td>\n",
+              "      <td>Black</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>Cuba</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   age         workclass  fnlwgt  education  education-num  \\\n",
+              "0   39         State-gov   77516  Bachelors             13   \n",
+              "1   50  Self-emp-not-inc   83311  Bachelors             13   \n",
+              "2   38           Private  215646    HS-grad              9   \n",
+              "3   53           Private  234721       11th              7   \n",
+              "4   28           Private  338409  Bachelors             13   \n",
+              "\n",
+              "       marital-status         occupation   relationship   race     sex  \\\n",
+              "0       Never-married       Adm-clerical  Not-in-family  White    Male   \n",
+              "1  Married-civ-spouse    Exec-managerial        Husband  White    Male   \n",
+              "2            Divorced  Handlers-cleaners  Not-in-family  White    Male   \n",
+              "3  Married-civ-spouse  Handlers-cleaners        Husband  Black    Male   \n",
+              "4  Married-civ-spouse     Prof-specialty           Wife  Black  Female   \n",
+              "\n",
+              "   capital-gain  capital-loss  hours-per-week native-country income  \n",
+              "0          2174             0              40  United-States  <=50K  \n",
+              "1             0             0              13  United-States  <=50K  \n",
+              "2             0             0              40  United-States  <=50K  \n",
+              "3             0             0              40  United-States  <=50K  \n",
+              "4             0             0              40           Cuba  <=50K  "
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
+      "source": [
+        "# load dataset\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/pplonski/datasets-for-start/master/adult/data.csv', skipinitialspace=True)\n",
+        "x_cols = [c for c in df.columns if c != 'income']\n",
+        "# set input matrix and target column\n",
+        "X = df[x_cols]\n",
+        "y = df['income']\n",
+        "# show first rows of data\n",
+        "df.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# data split train / test\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3, random_state=1234)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "for i in range(100):\n",
+        "    input_data = dict(X_test.iloc[i])\n",
+        "    target = y_test.iloc[i]\n",
+        "    r = requests.post(\"http://127.0.0.1:8000/api/v1/income_classifier/predict?status=ab_testing\", input_data)\n",
+        "    response = r.json()\n",
+        "    # provide feedback\n",
+        "    requests.put(\"http://127.0.0.1:8000/api/v1/mlrequests/{}\".format(response[\"request_id\"]), {\"feedback\": target})"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Collecting plotly\n",
+            "  Downloading plotly-5.4.0-py2.py3-none-any.whl (25.3 MB)\n",
+            "\u001b[K     |████████████████████████████████| 25.3 MB 4.3 MB/s \n",
+            "\u001b[?25hCollecting tenacity>=6.2.0\n",
+            "  Downloading tenacity-8.0.1-py3-none-any.whl (24 kB)\n",
+            "Requirement already satisfied: six in /home/harima/my_ml_service/env/lib/python3.8/site-packages (from plotly) (1.16.0)\n",
+            "Installing collected packages: tenacity, plotly\n",
+            "Successfully installed plotly-5.4.0 tenacity-8.0.1\n"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install plotly\n",
+        "import plotly.io as pio\n",
+        "pio.renderers.default = 'iframe_connected'"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyPlJm2GqWhp1acMjBpOl0sV",
+      "include_colab_link": true,
+      "name": "Model for My ML Service",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.10"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
